# fastapi-cors

./: README.md  cspell.config.yaml  devbox.json  justfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: lint.yml
fastapi_cors/: __init__.py  env.py  main.py
tests/: conftest.py
tests/test_01_env/: test_defaults.py
tests/test_02_main/: test_main.py
